[package]
name = "webserver"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
axum.workspace = true
clickhouse.workspace = true
dotenvy.workspace = true
envy.workspace = true
features.workspace = true
http1.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tower-http.workspace = true
